--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.40.0
-supabase
-pandas==2.2.2
-python-dateutil==2.9.0
-httpx==0.27.2
+streamlit
+supabase-py
+pandas
+python-dateutil
+httpx
