--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-supabase-py
-pandas
-python-dateutil
-httpx
+streamlit==1.39.0
+supabase-py==2.4.0
+pandas==2.2.2
+python-dateutil==2.9.0
+httpx==0.27.2
